landing nav refactor / landing page component

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,3 +1,9 @@
+html,
+body {
+  margin: 0;
+  font-family: 'Open Sans';
+}
+
 .profile-dropdown {
   display: flex;
   justify-self: flex-end;
@@ -10,7 +16,43 @@
   display: none;
 }
 
-#landing_container {
+#landing-nav-container {
   display: flex;
   justify-content: space-between;
+  padding: 1.75rem 2.5em;
+  align-items: center;
+  font-weight: bold;
+  letter-spacing: .25px;
+}
+
+#landing-nav-home {
+  color: white;
+  text-decoration: none;
+  font-family: 'Black Han Sans';
+  font-weight: 100;
+  font-size: 18px;
+  letter-spacing: 1px;
+}
+
+#landing-nav-mid-container {
+  display: flex;
+  gap: 2.5rem;
+}
+
+.landing-nav-text {
+  text-decoration: none;
+  color: white;
+  font-size: 14px;
+  letter-spacing: 1px;
+}
+
+.login-logout {
+  all: unset;
+  cursor: pointer;
+  color: #23272a;
+  background-color: white;
+  padding: .60rem .75rem;
+  border-radius: 2rem;
+  font-size: 12px;
+  font-weight: 500;
 }
