--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,1 +1,3 @@
 /* TODO Add site wide styles */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans');
