--- a/react-app/src/components/LandingPage/index.css
+++ b/react-app/src/components/LandingPage/index.css
@@ -1,5 +1,5 @@
 /* #landing-background {
-  background-image: url('../../assets/images/landing-background-2.jpg');
+  background-image: url('../../assets/images/landing-background.jpg');
   background-position: bottom center;
   min-height: 40rem;
   width: 100%;
@@ -46,4 +46,6 @@
   font-size: 18px;
   padding: 1rem 2rem;
   font-weight: 600;
+  color: white;
+  background-color: #23272a;
 }
