--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,9 +1,3 @@
-html,
-body {
-  margin: 0;
-  font-family: 'Open Sans';
-}
-
 .profile-dropdown {
   display: flex;
   justify-self: flex-end;
@@ -14,6 +8,12 @@ body {
 
 .hidden {
   display: none;
+}
+
+html,
+body {
+  margin: 0;
+  font-family: 'Open Sans';
 }
 
 #landing-nav-container {
@@ -32,6 +32,13 @@ body {
   font-weight: 100;
   font-size: 18px;
   letter-spacing: 1px;
+  display: flex;
+  align-items: center;
+}
+
+#landing-nav-logo {
+  height: 1.5rem;
+  margin-right: .75rem;
 }
 
 #landing-nav-mid-container {
