--- a/react-app/src/components/ServersBar/ServersBar.css
+++ b/react-app/src/components/ServersBar/ServersBar.css
@@ -1,11 +1,12 @@
 .servers-container {
-  height: max-content;
+  height: 100vh;
   width: 72px;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #1e1f22;
   /* background-color: #101113; */
+  overflow-y: auto;
 }
 
 .server-pic {
