--- a/react-app/src/components/LoginFormPage/LoginForm.css
+++ b/react-app/src/components/LoginFormPage/LoginForm.css
@@ -33,7 +33,13 @@
   flex-direction: column;
   gap: .75rem;
   padding: 0;
-  margin: 0;
+  margin-top: 1rem;
+}
+
+.login-form-section {
+  display: flex;
+  flex-direction: column;
+  gap: .25rem;
 }
 
 .login-form-item {
