--- a/react-app/src/components/ChannelMessages/index.css
+++ b/react-app/src/components/ChannelMessages/index.css
@@ -1,13 +1,33 @@
+
 #channel-messages-container{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 #message-container{
     text-align: left;
-    margin-top: 40px;
-    margin-left: 5px;
+    margin: 20px 0 20px 20px;
     font-size: 16px;
     color: white;
     width: 100%;
 }
+/*column2 scrollbar*/
+#channel-messages-container::-webkit-scrollbar {
+    background-color: #585858;
+    width: 8px;
+    border-radius: 4px;
+  }
+#channel-messages-container::-webkit-scrollbar-thumb {
+    background-color: #1e1f22;
+    border-radius: 4px;
+  }
+#channel-messages-container::-webkit-scrollbar:hover {
+    width: 12px;
+  }
+#channel-messages-container::-webkit-scrollbar-thumb:hover {
+    width: 12px;
+  }
