--- a/react-app/src/components/Dashboard/index.css
+++ b/react-app/src/components/Dashboard/index.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   height: 100vh;
+  overflow-y: hidden;
 }
 
 #dashboard-columns-container {
@@ -29,18 +30,44 @@
   }
 
   .scrollable-column {
-    max-height: 100%;
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x:hidden;
   }
-  .scrollable-column::-webkit-scrollbar {
+  .server-scrollable-column {
+    max-height: 100%;
+    overflow-y: hidden;
+    overflow-x:hidden;
+    border: 1px solid orange;
+  }
+  /*server scrollbar*/
+  .servers-container::-webkit-scrollbar {
     width: 0.1em;
   }
 
-  .scrollable-column::-webkit-scrollbar-thumb {
+  .servers-container::-webkit-scrollbar-thumb {
     background-color: transparent;
+  }
+  /*column2 scrollbar*/
+  .scrollable-column::-webkit-scrollbar {
+    background-color: #585858;
+    width: 8px;
+    border-radius: 4px;
+  }
+  .scrollable-column::-webkit-scrollbar-thumb {
+    background-color: #1e1f22;
+    border-radius: 4px;
+  }
+  .scrollable-column::-webkit-scrollbar:hover {
+    width: 12px;
+  }
+  .scrollable-column::-webkit-scrollbar-thumb:hover {
+    width: 12px;
   }
 
   #column-2-wrapper{
     height: 100%;
+    overflow-y: auto; /* Enable vertical scrolling if needed */
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
   }
