--- a/react-app/src/components/ServersBar/ServersBar.css
+++ b/react-app/src/components/ServersBar/ServersBar.css
@@ -69,3 +69,18 @@
 .under-server-pic:hover {
   border-radius: 16px;
 }
+
+.server-scrollable-column {
+  max-height: 100%;
+  overflow-y: auto;
+  overflow-x:hidden;
+  border: 1px solid orange;
+}
+/*server scrollbar*/
+.server-scrollable-column::-webkit-scrollbar {
+  width: 0.1em;
+}
+
+.server-scrollable-column::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
