added create server modal

--- a/react-app/src/components/ServersBar/ServersBar.css
+++ b/react-app/src/components/ServersBar/ServersBar.css
@@ -84,3 +84,10 @@
 .server-scrollable-column::-webkit-scrollbar-thumb {
   background-color: transparent;
 }
+
+#server-modal {
+  border-radius: 100%;
+  height: 48px;
+  width: 48px;
+  background-color: red;
+}
