--- a/react-app/src/components/Dashboard/index.css
+++ b/react-app/src/components/Dashboard/index.css
@@ -1,9 +1,16 @@
 #dashboard-container {
   display: flex;
+  flex-direction: row;
   width: 100%;
   height: 100vh;
   overflow-y: hidden;
 }
+.dashboard-serverbar {
+ border: 1px solid red;
+ width: 72px;
+
+}
+
 
 #dashboard-columns-container {
   display: flex;
@@ -13,6 +20,8 @@
 #column-1-background {
   background-color: #2B2D31;
   flex: 0.3;
+  border: 1px solid green;
+  flex: 0.2;
 }
 
 #column-2-background {
