--- a/react-app/src/components/ChannelBar/ChannelBar.css
+++ b/react-app/src/components/ChannelBar/ChannelBar.css
@@ -3,11 +3,18 @@
     color: #949ba4;
     /* margin: 5px 0px 5px 10px; */
     margin-left: 10px;
-    
+
 }
 .channel-list-container{
     padding-left: 10px;
 }
 .create-channel .channel{
     width: 100%;
+}
+
+.update-channel-link {
+text-decoration: none;
+color: rgb(210, 224, 12);
+display: flex;
+flex-direction: row
 }
