--- a/react-app/src/components/CreateChannelModal/CreateChannelModal.css
+++ b/react-app/src/components/CreateChannelModal/CreateChannelModal.css
@@ -1,32 +1,14 @@
 /* CreateChannelModal.css */
-/* Modal Container */
-div {
-    background: rgba(0, 0, 0, 0.7);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
 
-  /* Modal Content */
-  form {
-    background-color: #36393f;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    max-width: 400px;
-    width: 100%;
-    text-align: center;
-  }
 
-  h2 {
-    color: #fff;
+
+h2 {
+    color: black;
     font-size: 24px;
     margin-bottom: 20px;
+    margin-top: 30px;
+    margin-left: 40px;
+
   }
 
   /* Input Fields */
@@ -35,10 +17,12 @@ div {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
 
   h3 {
-    color: #fff;
+    color: black;
     font-size: 16px;
     margin-bottom: 8px;
   }
@@ -74,8 +58,11 @@ div {
   /* Buttons */
   .channel-buttons {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
     align-items: center;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
   }
 
   button {
@@ -86,30 +73,39 @@ div {
     font-size: 14px;
   }
 
-  #cancel-button {
-    background-color: #7289da;
-    color: #fff;
-  }
 
   #create-channel-button {
     background-color: #43b581;
     color: #fff;
   }
 
-  /* Close Button */
-  /* You might want to add a close button for the modal */
-  .close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
+
+#cancel-button {
+    background-color: rgb(83, 63, 63);
     color: #fff;
-    outline: none;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    margin-right: 10px;
   }
 
-  .close-button:hover {
-    color: #ff6b6b;
+  #cancel-button:hover {
+    background-color: rgb(224, 12, 12);
+  }
+
+  /* Create Channel Button */
+  #create-channel-button {
+    background-color: #69be92;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+
+  #create-channel-button:hover {
+    background-color: #07b34c;
   }
