fixed small issues added detail page

--- a/react-app/src/components/Dashboard/index.css
+++ b/react-app/src/components/Dashboard/index.css
@@ -59,3 +59,10 @@
     overflow-x: hidden;
     overflow-y: hidden;
   }
+
+  .logout {
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 20px;
+    left: 125px;
+  }
