--- a/react-app/src/components/ChannelBar/ChannelBar.css
+++ b/react-app/src/components/ChannelBar/ChannelBar.css
@@ -59,6 +59,7 @@ color: rgb(201, 201, 201);
     border-bottom: 2px solid #313338;
     font-size: 10px;
     padding: 10px;
+    margin-top: 10px;
     justify-content: space-between;
     align-items: center;
 }
@@ -77,7 +78,7 @@ color: rgb(201, 201, 201);
     left: 95px;
     text-align: center;
     height: 200px;
-    
+
 }
 .edit-server{
     text-decoration: none;
@@ -88,5 +89,3 @@ color: rgb(201, 201, 201);
         width: 170px; /* Adjust styles for smaller screens if necessary */
     }
   }
-
-  
