--- a/react-app/src/components/PublicServers/index.css
+++ b/react-app/src/components/PublicServers/index.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   padding: 2rem;
+  background-color: #313338;
 }
 
 #dash-pub-serv-list {
@@ -13,6 +14,7 @@
   flex-wrap: wrap;
   width: 100%;
   gap: 1rem;
+  margin-top: 20px;
 }
 
 .pub-serv-element {
@@ -20,12 +22,14 @@
   display: flex;
   flex-direction: column;
   object-fit: cover;
-  background: #232428;
 }
 
 .pub-img {
-  border-radius: .5rem .5rem 0 0;
+  border-radius: 1rem;
   width: 16rem;
   height: 9rem;
   object-fit: cover;
+}
+.server-find-name {
+  color: #B5BABD;
 }
