--- a/react-app/src/components/UpdateChannel/UpdateChannel.css
+++ b/react-app/src/components/UpdateChannel/UpdateChannel.css
@@ -1,3 +1,17 @@
 .error-message {
     color: red;
 }
+.update-channel-page {
+    padding-top: 20px ;
+    background-color: #313338;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem
+}
+.update-channel-form {
+    display: flex;
+    gap: .5rem;
+}
