--- a/react-app/src/components/PublicServers/index.css
+++ b/react-app/src/components/PublicServers/index.css
@@ -1,5 +1,8 @@
 #dash-pub-serv-page {
   display: flex;
+  background-color: #313338;
+  width: 100%;
+  height: 100vh;
 }
 
 #dash-pub-serv-container {
