--- a/react-app/src/components/Dashboard/index.css
+++ b/react-app/src/components/Dashboard/index.css
@@ -5,8 +5,9 @@
   height: 100vh;
   overflow-y: hidden;
 }
+
 .dashboard-serverbar {
- width: 72px;
+  width: 72px;
 
 }
 
@@ -26,43 +27,85 @@
   background-color: #313338;
   flex: 1;
 }
-.messages{
+
+.messages {
   text-align: center;
 }
 
-  #column-3-background {
-    background-color: #2B2D31;
-    flex: 0.3;
-  }
+#column-3-background {
+  background-color: #2B2D31;
+  flex: 0.3;
+}
 
 
-  .server-scrollable-column {
-    max-height: 100%;
-    overflow-y: hidden;
-    overflow-x:hidden;
-    border: 1px solid orange;
-  }
-  /*server scrollbar*/
-  .servers-container::-webkit-scrollbar {
-    width: 0.1em;
-  }
+.server-scrollable-column {
+  max-height: 100%;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  border: 1px solid orange;
+}
 
-  .servers-container::-webkit-scrollbar-thumb {
-    background-color: transparent;
-  }
+/*server scrollbar*/
+.servers-container::-webkit-scrollbar {
+  width: 0.1em;
+}
+
+.servers-container::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
 
 
-  #column-2-wrapper{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow-x: hidden;
-    overflow-y: hidden;
-  }
+#column-2-wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
 
-  .logout {
-    position: absolute;
-    bottom: 0;
-    margin-bottom: 20px;
-    left: 125px;
-  }
+.logout {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1rem;
+  left: 5.5rem;
+  border: none;
+  font-size: 14px;
+  font-weight: bold;
+  padding: .5rem;
+}
+
+#username {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 4rem;
+  left: 8rem;
+  color: #F0F0F0;
+  font-weight: bold;
+  letter-spacing: .5px;
+}
+
+#user-thumbnail {
+  width: 2rem;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 3.6rem;
+  left: 5.5rem;
+  color: #949BA4;
+  border-radius: 1rem;
+}
+
+#user-thumbnail-alt {
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 3.6rem;
+  left: 5.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #949BA4;
+  border-radius: 1rem;
+  background: #1E1F22;
+  font-weight: bolder;
+}
