--- a/react-app/src/components/chat/index.css
+++ b/react-app/src/components/chat/index.css
@@ -53,10 +53,14 @@
 }
 .message-container{
   text-align: left;
-  margin: 20px 0 20px 20px;
+  padding: 20px 0 20px 20px;
   font-size: 16px;
   color: white;
   width: 100%;
+  
+}
+.message-container:hover{
+  background-color: #2E3035;
   
 }
 
