--- a/react-app/src/components/Friends/Friends.css
+++ b/react-app/src/components/Friends/Friends.css
@@ -2,18 +2,23 @@
     display: flex;
     margin: 20px 0px 20px 15px;
 }
+
 .friends-nav {
+    cursor: pointer;
     color: #B5BAC1;
     font-size: 16px;
     margin-right: 20px;
     padding: 2px 5px 2px 5px;
 }
+
 .active-friend {
     border: 1px transparent solid;
-    background-color: rgba(211, 211, 211, 0.1);;
+    background-color: rgba(211, 211, 211, 0.1);
+    ;
     border-radius: 5px;
     color: white;
 }
+
 .list-header {
     color: #B5BAC1;
     font-size: 14px;
@@ -21,9 +26,11 @@
     padding: 2px 5px 10px 5px;
     border-bottom: 1px #3F4147 solid;
 }
+
 .listed-names {
     margin: 5px 0px 0px 15px;
 }
+
 .li-friends {
     list-style: none;
     display: flex;
@@ -31,7 +38,9 @@
     border-bottom: 1px #3F4147 solid;
     margin-right: 20px;
     margin-top: 10px;
+    align-items: center;
 }
+
 .listed-name {
     color: #F2F3F5;
     font-size: 16px;
@@ -45,13 +54,15 @@
     border: 1px solid transparent;
     border-radius: 24px;
     object-fit: cover;
-  }
+}
+
 .checkmark {
     font-size: 16px;
     position: absolute;
     right: 20px;
     color: green;
 }
+
 .add-friend-b {
     position: absolute;
     right: 20px;
