--- a/react-app/src/components/Dashboard/index.css
+++ b/react-app/src/components/Dashboard/index.css
@@ -16,7 +16,12 @@
   display: flex;
   flex: 1;
 }
-
+#placeholder-column-1{
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+}
 #column-1-background {
   background-color: #2b2d31;
   flex: 0.2;
@@ -64,10 +69,6 @@
 }
 
 .logout {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1rem;
-  left: 5.5rem;
   border: none;
   font-size: 14px;
   font-weight: bold;
@@ -75,23 +76,30 @@
 }
 
 #username {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 4rem;
-  left: 8rem;
   color: #F0F0F0;
   font-weight: bold;
   letter-spacing: .5px;
+} 
+
+#user-name-logout{
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 #user-thumbnail {
   width: 2rem;
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 3.6rem;
-  left: 5.5rem;
+  height: 2rem;
   color: #949BA4;
+  object-fit: cover;
   border-radius: 1rem;
+  display: flex;
+}
+.user-img-and-username{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
 }
 
 #user-thumbnail-alt {
