--- a/react-app/src/components/chat/index.css
+++ b/react-app/src/components/chat/index.css
@@ -46,6 +46,7 @@
   width: 100%;
   overflow-x: hidden;
   flex-grow: 1;
+  justify-content: flex-end;
 }
 
 .scrollable-column {
@@ -59,7 +60,7 @@
 }
 
 .message-container {
-  margin: 20px 0 20px 20px;
+  padding: 10px 0 10px 10px;
   font-size: 16px;
   color: white;
   width: 100%;
