--- a/react-app/src/components/Dashboard/index.css
+++ b/react-app/src/components/Dashboard/index.css
@@ -16,12 +16,14 @@
   display: flex;
   flex: 1;
 }
-#placeholder-column-1{
+
+#placeholder-column-1 {
   display: flex;
   height: 100%;
   flex-direction: column;
   justify-content: space-between;
 }
+
 #column-1-background {
   background-color: #2b2d31;
   flex: 0.2;
@@ -79,12 +81,13 @@
   color: #F0F0F0;
   font-weight: bold;
   letter-spacing: .5px;
-} 
+}
 
-#user-name-logout{
+#user-name-logout {
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  /* justify-content: flex-start; */
 }
 
 #user-thumbnail {
@@ -95,11 +98,13 @@
   border-radius: 1rem;
   display: flex;
 }
-.user-img-and-username{
+
+.user-img-and-username {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  padding: 1rem;
+  padding-bottom: 1rem;
+  gap: .5rem;
 }
 
 #user-thumbnail-alt {
