name length handling

--- a/react-app/src/components/ChannelBar/ChannelBar.css
+++ b/react-app/src/components/ChannelBar/ChannelBar.css
@@ -57,8 +57,9 @@
     /* Adjust margin */
     align-items: center;
     border-radius: 1rem;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     flex-wrap: nowrap;
+    /* max-width: 15rem; */
 }
 
 .server-name {
