--- a/react-app/src/components/Dashboard/index.css
+++ b/react-app/src/components/Dashboard/index.css
@@ -110,9 +110,9 @@
 #user-thumbnail-alt {
   width: 2rem;
   height: 2rem;
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
-  margin-bottom: 3.6rem;
+  /* margin-bottom: 3.6rem; */
   left: 5.5rem;
   display: flex;
   justify-content: center;
