--- a/react-app/src/components/ServersBar/ServersBar.css
+++ b/react-app/src/components/ServersBar/ServersBar.css
@@ -98,6 +98,10 @@
   align-items: center;
 }
 
+.server-modal:hover {
+  border-radius: 1rem;
+}
+
 .create-channel {
   background-color: transparent;
   border-radius: 0px;
@@ -114,6 +118,7 @@
   color: rgb(201, 201, 201);
   ;
 }
+
 .server-letter {
   height: 48px;
   width: 48px;
@@ -124,13 +129,16 @@
   align-items: center;
   font-size: 20px;
   color: white;
-  padding: 2px; /* Adjust the padding as needed */
-}
-.server-letter:hover {
-  border-radius: 20px; /* Adjust the padding as needed */
+  padding: 2px;
+  /* Adjust the padding as needed */
 }
 
-.server-tag{
+.server-letter:hover {
+  border-radius: 20px;
+  /* Adjust the padding as needed */
+}
+
+.server-tag {
   list-style: none;
   text-decoration: none;
   font-size: 20px;
