--- a/react-app/src/components/chat/index.css
+++ b/react-app/src/components/chat/index.css
@@ -47,6 +47,7 @@
   overflow-x: hidden;
   flex-grow: 1;
   justify-content: flex-end;
+  padding-left: .5rem;
 }
 
 .scrollable-column {
@@ -58,19 +59,9 @@
   box-sizing: border-box;
   /* Include border and padding in the total width */
 }
-<<<<<<< HEAD
-.message-container{
-  text-align: left;
-  padding: 20px 0 20px 20px;
-=======
 
 .message-container {
-<<<<<<< HEAD
-  margin: 20px 0 20px 20px;
->>>>>>> fb7d17e (package, package-lock, and message modal icons)
-=======
   padding: 10px 0 10px 10px;
->>>>>>> 0a591d5 (added css and conditional rendering)
   font-size: 16px;
   color: white;
   width: 100%;
