--- a/react-app/src/components/Friends/Friends.css
+++ b/react-app/src/components/Friends/Friends.css
@@ -34,13 +34,14 @@
 .li-friends {
     list-style: none;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding: 2px 5px 10px 5px;
     border-bottom: 1px #3F4147 solid;
     margin-right: 20px;
     margin-top: 10px;
     align-items: center;
 }
+
 .li-users {
     list-style: none;
     display: flex;
@@ -50,6 +51,7 @@
     margin-top: 10px;
     align-items: center;
 }
+
 .friend-info {
     display: flex;
     flex-direction: row;
