--- a/react-app/src/components/Friends/Friends.css
+++ b/react-app/src/components/Friends/Friends.css
@@ -34,7 +34,7 @@
 .li-friends {
     list-style: none;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     padding: 2px 5px 10px 5px;
     border-bottom: 1px #3F4147 solid;
     margin-right: 20px;
