--- a/react-app/src/components/Friends/Friends.css
+++ b/react-app/src/components/Friends/Friends.css
@@ -63,6 +63,7 @@
     font-size: 16px;
     margin-right: 1rem;
 }
+
 .listed-friend-name {
     color: #F2F3F5;
     font-size: 16px;
@@ -76,7 +77,8 @@
     border-radius: 24px;
     object-fit: cover;
 }
-.user-pic-alt{
+
+.user-pic-alt {
     display: flex;
     height: 48px;
     width: 48px;
@@ -89,15 +91,22 @@
     align-items: center;
     justify-content: center;
 }
-.add-friend-info{
+
+.add-friend-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .checkmark {
     font-size: 16px;
     color: green;
 }
 
-.add-friend-b {
+.friends-pfp-name-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
+
+.add-friend-b {}
